 cnp-mitre-t1571-mysql-ingress-w7yq64a.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-t1571-mysql-ingress-edfy0be
  namespace: explorer
spec:
  description: "Allow ingress communication only through standard ports of MySQL pods"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: mysql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      controller-revision-hash: mysql-7d648d884
      helm.sh/chart: mysql-8.6.1
      statefulset.kubernetes.io/pod-name: mysql-0
  ingress:
  - toPorts:
    - ports:
      - port: "3306"
        protocol: TCP
      - port: "33060"
        protocol: TCP
